[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Symtext.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Symtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.968627, 0.662745, 0.32549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.968627, 0.662745, 0.32549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 0.376471, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 3 )

[node name="Leaderboard" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ScoreBoard" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TitleContainer" type="CenterContainer" parent="ScoreBoard"]
margin_right = 264.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="ScoreBoard/TitleContainer"]
margin_left = 42.0
margin_right = 222.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 8 )
text = "TIME'S UP!"
align = 1
valign = 1

[node name="PositionContainer" type="CenterContainer" parent="ScoreBoard"]
margin_top = 49.0
margin_right = 264.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="ScoreBoard/PositionContainer"]
margin_right = 264.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 8 )
text = "positionlabel"
align = 1
valign = 1

[node name="MessageContainer" type="CenterContainer" parent="ScoreBoard"]
margin_top = 98.0
margin_right = 264.0
margin_bottom = 128.0

[node name="TextMessage" type="Label" parent="ScoreBoard/MessageContainer"]
margin_left = 27.0
margin_right = 237.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 7 )
text = "Loading scores..."
valign = 1

[node name="CloseButtonContainer" type="CenterContainer" parent="ScoreBoard"]
margin_top = 132.0
margin_right = 264.0
margin_bottom = 161.0

[node name="CloseButton" parent="ScoreBoard/CloseButtonContainer" instance=ExtResource( 4 )]
margin_left = 71.0
margin_right = 192.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
text = "Play Again"

[node name="MenuButtonContainer" type="CenterContainer" parent="ScoreBoard"]
margin_top = 165.0
margin_right = 264.0
margin_bottom = 194.0

[node name="MenuButton" parent="ScoreBoard/MenuButtonContainer" instance=ExtResource( 4 )]
margin_left = 93.0
margin_right = 170.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
text = "Menu"

[node name="NameBoard" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.5
margin_top = -300.0
margin_right = 512.5
margin_bottom = 300.0
alignment = 1

[node name="LabelContainer" type="CenterContainer" parent="NameBoard"]
margin_top = 246.0
margin_right = 1025.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="NameBoard/LabelContainer"]
margin_left = 361.0
margin_right = 664.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "ENTER YOUR INITIALS"

[node name="NameContainer" type="CenterContainer" parent="NameBoard"]
margin_top = 287.0
margin_right = 1025.0
margin_bottom = 321.0
rect_min_size = Vector2( 0, 20 )

[node name="NameEdit" type="LineEdit" parent="NameBoard/NameContainer"]
margin_left = 465.0
margin_right = 559.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 12 )
align = 1
max_length = 3

[node name="SaveButtonContainer" type="CenterContainer" parent="NameBoard"]
margin_top = 325.0
margin_right = 1025.0
margin_bottom = 354.0

[node name="SaveButton" parent="NameBoard/SaveButtonContainer" instance=ExtResource( 4 )]
margin_left = 474.0
margin_right = 550.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
text = "save"

[connection signal="pressed" from="ScoreBoard/CloseButtonContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ScoreBoard/MenuButtonContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="NameBoard/SaveButtonContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
